CHG: Refactored code